--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
           "version_code": 20,
           "version_name":"0.020",
           "date":"25.01.2021",
-          "description":"\nï fix1;\nï fix2;\nï ·‡„ÙËÍÒ˚;",
+          "description":"\n‚Ä¢ fix1;\n‚Ä¢ fix2;\n‚Ä¢ –±–∞–≥—Ñ–∏–∫—Å—ã;",
           "apk_urls":["http://..apk"]
       }
   },
