--- a/config.json
+++ b/config.json
@@ -7,11 +7,11 @@
 
   "update": {
       "release": {
-          "version_code": 20,
-          "version_name":"0.020",
+          "version_code": 77,
+          "version_name":"0.077",
           "date":"25.01.2021",
           "description":"\n• fix1;\n• fix2;\n• багфиксы;",
-          "apk_urls":["http://..apk"]
+          "apk_urls":["http://bit.ly/lmd_apk"]
       }
   },
   
