--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
           "version_name":"0.077",
           "date":"25.01.2021",
           "description":"\n• fix1;\n• fix2;\n• багфиксы;",
-          "apk_urls":["http://bit.ly/lmd_apk_"]
+          "apk_urls":["http://bit.ly/lmd_apk"]
       }
   },
   
