--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-      "date": "01.01.2021",
+      "date": "04.04.2021",
       "info": "Net config",
       "external_config": true
   },
@@ -8,11 +8,11 @@
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 07,
-          "version_name":"0.077",
-          "date":"25.01.2021",
-          "description":"\n• fix1;\n• fix2;\n• багфиксы;",
-          "apk_urls":["http://bit.ly/lmd_apk"]
+          "version_code": 21,
+          "version_name":"0.21",
+          "date":"04.01.2021",
+          "description":"\n• автообновление версий(последующие);\n• добавлены кастомные wizard(временно);\n• багфиксы;",
+          "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
   
