--- a/config.json
+++ b/config.json
@@ -1,15 +1,14 @@
 {
   "app": {
       "date": "04.04.2021",
-      "info": "Net config",
-      "external_config": true
+      "info": "Net config"
   },
 
   "update": {
       "enable": "true",
       "release": {
           "version_code": 21,
-          "version_name":"0.21",
+          "version_name":"0.20",
           "date":"04.01.2021",
           "description":"\n• автообновление версий(последующие);\n• добавлены кастомные wizard(временно);\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
