--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
           "version_code": 21,
           "version_name":"0.21",
           "date":"06.01.2021",
-          "description":"\n• новое ядро exoplayer;\n• заставка при загрузке;\n• багфиксы;",
+          "description":"\n• новое ядро exoplayer;\n• заставка при загрузке;\n• новый статус beta;\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
