--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 22,
-          "version_name":"0.22",
-          "date":"09.01.2021",
-          "description":"\n• новая опция настройки-интерфейс-плотность экрана;\n• показ и работа с внутренним епг в плейлисте;\n• фикс локального избранного;\n• багфиксы;",
+          "version_code": 23,
+          "version_name":"0.23",
+          "date":"13.01.2021",
+          "description":"\n• фикс поиска каналов;\n• фикс ролительского контроля;\n• опция поиск канала из плейлиста;\n• опция добавить иконку для канала;\n• сохранение ранее используемого пути в файл-менеджере;\n•багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
