--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
           "version_code": 23,
           "version_name":"0.23",
           "date":"13.01.2021",
-          "description":"\n• фикс поиска каналов;\n• фикс ролительского контроля;\n• опция поиск канала из плейлиста;\n• опция добавить иконку для канала;\n• сохранение ранее используемого пути в файл-менеджере;\n•багфиксы;",
+          "description":"\n• фикс поиска каналов;\n• фикс родительского контроля;\n• опция поиск канала из плейлиста;\n• опция добавить иконку для канала;\n• сохранение ранее используемого пути в файл-менеджере;\n•багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
