--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 24,
-          "version_name":"0.24",
-          "date":"13.01.2021",
-          "description":"\n• фикс поиска каналов;\n• фикс родительского контроля;\n• опция поиск канала из плейлиста;\n• опция добавить иконку для канала;\n• сохранение ранее используемого пути в файл-менеджере;\n•багфиксы;",
+          "version_code": 25,
+          "version_name":"0.25",
+          "date":"20.01.2021",
+          "description":"\n• добавлена возможность восстанавливать файл синхронизации;\n• резервное копирование/восстановление данных приложения в новой настройке [Данные];\n• фикс черной темы;\n•багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
