--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 25,
-          "version_name":"0.25",
-          "date":"20.01.2021",
-          "description":"\n• добавлена возможность восстанавливать файл синхронизации;\n• резервное копирование/восстановление данных приложения в новой настройке [Данные];\n• фикс черной темы;\n• багфиксы;",
+          "version_code": 26,
+          "version_name":"0.26",
+          "date":"21.01.2021",
+          "description":"\n• добавлена возможность восстанавливать файл синхронизации;\n• резервное копирование/восстановление данных приложения в новой настройке [Данные];\n• фикс черной темы;\n• user-agent плеера по-умолчанию;\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
