--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 27,
-          "version_name":"0.27",
-          "date":"25.02.2021",
-          "description":"\n• багфиксы;",
+          "version_code": 28,
+          "version_name":"0.28",
+          "date":"27.02.2021",
+          "description":"\n• запрос на использование внутреннего EPG;\n• закрытие панели управления плеера при клике на свободном пространстве;\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
