--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 28,
-          "version_name":"0.28",
-          "date":"27.02.2021",
-          "description":"\n• запрос на использование внутреннего EPG;\n• закрытие панели управления плеера при клике на свободном пространстве;\n• новое ядро exoplayer;\n• багфиксы;",
+          "version_code": 29,
+          "version_name":"0.29",
+          "date":"01.03.2021",
+          "description":"\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
