--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
           "version_code": 31,
           "version_name":"0.31",
           "date":"08.03.2021",
-          "description":"• багфиксы;",
+          "description":"\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
