--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
   "app": {
-      "date": "06.04.2021",
+      "date": "22.03.2021",
       "info": "Net config"
   },
 
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 35,
-          "version_name":"0.35",
-          "date":"15.03.2021",
-          "description":"\n• багфиксы;",
+          "version_code": 1000,
+          "version_name":"1.01",
+          "date":"22.03.2021",
+          "description":"\n• аспект по-умолчанию в настройках плеера;\n• опции при долгом клике на плитках обзора (только при заблокированных свайпах);\n• удаление истории и избранного в обзоре;\n• иконки в файл-менеджере;\n• проверка времени на устройстве;\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
