--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
   "app": {
-      "date": "22.03.2021",
+      "date": "24.03.2021",
       "info": "Net config"
   },
 
   "update": {
       "enable": "true",
       "release": {
-          "version_code": 1002,
-          "version_name":"1.02",
-          "date":"22.03.2021",
-          "description":"\n• аспект по-умолчанию в настройках плеера;\n• опции при долгом клике на плитках обзора (только при заблокированных свайпах);\n• удаление истории и избранного в обзоре;\n• иконки в файл-менеджере;\n• проверка времени на устройстве;\n• багфиксы;",
+          "version_code": 1003,
+          "version_name":"1.03",
+          "date":"24.03.2021",
+          "description":"\n• оптимизация под Android 11;\n• инициализация db;\n• багфиксы;",
           "apk_urls":["http://bit.ly/lid_apk"]
       }
   },
