--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   },
 
   "update": {
-      "enable": "true",
+      "enable": "false",
       "release": {
           "version_code": 1003,
           "version_name":"1.03",
